Add MariaDB image for Ubuntu
Dockerfiles for MariaDB service installed from Ubuntu
Cloud Archive.

Change-Id: Ie609413d2bbf0855924da61ff75f5adf19690e01

--- a/docker/ubuntu/binary/base/Dockerfile
+++ b/docker/ubuntu/binary/base/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:trusty
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
+ENV DEBIAN_FRONTEND noninteractive
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends software-properties-common \
     && add-apt-repository cloud-archive:kilo \
