--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ scripts =
 [entry_points]
 console_scripts =
     kolla-build = kolla.cmd.build:main
+    kolla-dind = kolla.cmd.dind:main
 oslo.config.opts =
     kolla = kolla.opts:list_opts
 
